vm/42sh_tester/public/input_logs/error_logs/42sh_302
42sh:1:20: [1m[91merror[0m: syntax error near unexpected token: [1m[37m'}'[0m
  1  |  echo { echo salut ;}
     |                     [1m[91m^[0m
